Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5862

Jobstats tracking in changelogs doesn't support jobid_var=disable

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.7.0
    • Seen on master as of b6a3222
    • 3
    • 16403

      The work that has been done for LU-1996 seems to have introduced an odd bug in changelogs when jobid_var=disable. I don't know enough about this area to speculate on severity, but it seems pretty serious to me. The upshot is that changelogs don't make sense with the default jobid_var setting.

      Please see the attached reproducer script for details.

            jamesanunez James Nunez (Inactive)
            mjmac Michael MacDonald (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: