lustre/tests/sanity.sh
@@ -11337,6 +11337,14 @@ test_205() { # Job stats
 		jobids=$($LFS changelog $MDT0 | tail -9 | grep -c "j=")
 		[ $jobids -eq 9 ] ||
 			error "Wrong changelog jobid count $jobids != 9"
+
+		# LU-5862
+		jobstats_set disable
+		touch $DIR/$tfile
+		$LFS changelog $MDT0 | tail -1
+		jobids=$($LFS changelog $MDT0 | tail -1 | grep -c "j=")
+		[ $jobids -eq 0 ] ||
+			error "Unexpected jobids when jobid_var=disabled"
 	fi
 
 	# cleanup
